fix: jumping navigation fix

--- a/src/components/PageHeader/page-header.scss
+++ b/src/components/PageHeader/page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   padding: 26px 21px 40px 21px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
 }
 
