--- a/src/components/PageNavigation/page-navigation.scss
+++ b/src/components/PageNavigation/page-navigation.scss
@@ -1,7 +1,8 @@
 .page-navigation {
   display: flex;
-  align-items: center;
-  position: relative;
+  align-items: flex-start;
+  min-width: 100px;
+  margin-top: 21px;
   .current-view-name {
     font-family: "Gilroy-Regular", "sans-serif";
     font-size: 1rem;
@@ -9,7 +10,8 @@
     color: #ff6565;
     text-transform: uppercase;
     position: relative;
-    display: block;
+    margin: 0;
+    width: 100%;
     span {
       margin: 0 21px 0 0;
       display: block;
@@ -17,17 +19,9 @@
   }
 
   .page-navigation__inner-nav {
-    position: absolute;
-    top: 32px;
-
-    ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-
-      li {
-        margin-bottom: 3px;
-
+    position: relative;
+    margin-top: 0;
+    width: 100%;
         .page-navigation__link {
           font-size: 1rem;
           font-weight: 500;
@@ -35,22 +29,14 @@
           font-family: "Gilroy-Regular", "sans-serif";
           color: #ffffff;
           text-decoration: none;
+          display: block;
+          margin-bottom: 5px;
         }
-
         .page-navigation__link--active {
           color: #ff6565;
           margin-right: 21px;
         }
-      }
 
-      li:first-child {
-        text-align: right;
-      }
-
-      li:last-child {
-        margin-left: 20px;
-      }
-    }
   }
     .page-navigation__hamburger--open, .page-navigation__hamburger--closed {
       color: #ff6565;
